--- a/locales/zh-CN/chat.json
+++ b/locales/zh-CN/chat.json
@@ -27,7 +27,8 @@
   "duplicateSession": {
     "loading": "复制中...",
     "success": "复制成功",
-    "title": "{{title}} 副本"
+    "title": "{{title}} 副本",
+    "duplicate": "副本"
   },
   "duplicateTitle": "{{title}} 副本",
   "emptyAgent": "暂无助手",
